third_party/move/move-compiler-v2/tests/lambda/storable/registry.exp

Diagnostics:
error: unexpected token
  ┌─ tests/lambda/storable/registry.move:7:22
  │
6 │     struct Function {
  │                     - To match this '{'
7 │         f: |u64| u64 has store,
  │                      ^ Expected '}'
